syntax = "proto3";

package messages;

// The network control service definition.
service NetworkControl {
  rpc Echo (EchoRequest) returns (EchoResponse) {}
  rpc Ping (PingRequest) returns (PingResponse) {}

  // OpenvSwitch RPC series
  rpc CreateBridge (CreateBridgeRequest) returns(Response) {}
  rpc DeleteBridge (DeleteBridgeRequest) returns(Response) {}

  rpc AddPort (AddPortRequest) returns(Response) {}
  rpc AddDPDKPort (AddPortRequest) returns(Response) {}
  rpc GetPort (GetPortRequest) returns(GetPortResponse) {}
  rpc SetPort (SetPortRequest) returns(Response) {}
  rpc DeletePort (DeletePortRequest) returns(Response) {}

  rpc AddFlow (AddFlowRequest) returns(Response) {}
  rpc DeleteFlow (DeleteFlowRequest) returns(Response) {}
  rpc DumpFlows (DumpFlowsRequest) returns(DumpFlowsResponse) {}

  rpc DumpPorts (DumpPortsRequest) returns(DumpPortsResponse) {}
  // Docker RPC series
  rpc FindNetworkNamespacePath (FindNetworkNamespacePathRequest) returns(FindNetworkNamespacePathResponse) {}

  // Netlink RPC series
  rpc ConnectBridge (ConnectBridgeRequest) returns (Response) {}

  rpc ConfigureIface (ConfigureIfaceRequest) returns (Response) {}
  rpc ConfigureSriovIface (ConfigureSriovIfaceRequest) returns (Response) {}

  // Will be deprecated in the future
  rpc AddRoute (AddRouteRequest) returns (Response) {}
  rpc AddRoutesViaInterface (AddRoutesRequest) returns (Response) {}
  rpc AddRoutesViaGateway (AddRoutesRequest) returns (Response) {}
}

message EchoRequest {
  string word = 1;
}

message EchoResponse {
  string word = 1;
}

message PingRequest {
  string ping = 1;
}

message PingResponse {
  string pong = 1;
}

message Response {
    bool success = 1;
    string reason = 2;
}

message CreateBridgeRequest {
  string bridgeName = 1;
  string datapathType = 2;
}

message DeleteBridgeRequest {
  string bridgeName = 1;
}

message AddPortRequest {
  string bridgeName = 1;
  string ifaceName = 2;
  // option message: only for dpdk usage
  string dpdkDevargs = 3;
}

message PortOptions {
  int32 tag = 1;
  string VLANMode = 2;
  repeated int32 trunk = 3;
}

message SetPortRequest {
  string ifaceName = 1;
  PortOptions options = 2;
}

message GetPortRequest {
  string ifaceName = 1;
  PortOptions portOptions = 2;
}

message GetPortResponse {
  PortOptions portOptions = 1;
  Response serverResponse = 2;
}

message DeletePortRequest {
  string bridgeName = 1;
  string ifaceName = 2;
}

message AddFlowRequest {
  string bridgeName = 1;
  string flowString = 2;
}

message DeleteFlowRequest {
  string bridgeName = 1;
  string flowString = 2;
}

message DumpFlowsRequest {
  string bridgeName = 1;
}

message DumpFlowsResponse {
  repeated bytes flows = 1;
  Response serverResponse = 2;
}

message DumpPortsRequest {
  string bridgeName = 1;
}

message PortStatistic{
  uint64 byte = 1; 
  uint64 packets = 2; 
  uint64 dropped =3;
  uint64 errors = 4;
}

message PortInfo {
  int32 ID = 1;
  string name = 2;
  string macAddr = 3;

  PortStatistic received =4;
  PortStatistic transmitted =5;
}

message DumpPortsResponse {
  repeated PortInfo ports =1;
  Response serverResponse = 2;
}

message FindNetworkNamespacePathRequest {
  string podName = 1;
  string namespace = 2;
  string podUUID = 3;
}

message FindNetworkNamespacePathResponse {
  string path = 1;
  Response serverResponse = 2;
}

message ConnectBridgeRequest {
  string path = 1;
  string podUUID = 2;
  string containerVethName = 3;
  string bridgeName = 4;
}

message ConfigureIfaceRequest {
  string path = 1;
  string CIDR = 2;
  string containerVethName = 3;
}

message ConfigureSriovIfaceRequest {
  string path = 1;
  string PodUUID = 2;
  string If0 = 3;
  string CIDR = 4;
  string containerVethName = 5;
}

message AddRouteRequest {
  string path = 1;
  string dstCIDR = 2;
  string gwIP = 3;
  string containerVethName = 4;
}

message AddRoutesRequest {
  string path = 1;
  string containerVethName = 2;
  repeated string dstCIDRs = 3;
  repeated string gwIPs = 4;
}
